# GNN_GPU

./: .gitignore  ClusterGAT-New.ipynb  ClusterGAT-New_with_VK.ipynb  ClusterGAT.ipynb  PyG Dataset to NX.ipynb  README.md  input_data.json  main.py  pyproject.toml
data/: people_vk_pure_0.csv  some_connections.csv  some_connections.json
gnn_gpu/: final_processing.py  get_graph_fb.py  get_graph_vk.py  make_dataset.py  plot_graphs.py  pure_graph.py  vk_data.npz  vk_graph.npz
src/: get_graph.py
